--- a/Credit-card-fraud-detection.ipynb
+++ b/Credit-card-fraud-detection.ipynb
@@ -796,19 +796,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What is a sub-Sample?\n",
-    "In this case, our subsample will be a dataframe with a 50/50 ratio of fraud and Legitimate transactions. Other words, the sub-sample should have the same amount of fraud and Legitimate transactions.\n",
-    "\n"
+    "### What is the Resampling?\n",
+    "As you can see, the non-fraud transactions far outweigh the fraud transactions. If we train a binary classification model without fixing this problem, the model will be completely biased. It also impacts the correlations between features and I will show you how and why later on.\n",
+    "\n",
+    "In this case, our resampling will be a dataframe with a 50/50 ratio of fraud and Legitimate transactions. Other words, the resampling should have the same amount of fraud and Legitimate transactions.\n",
+    "\n",
+    "We have two options here: Undersampling or Oversampling:\n",
+    "\n",
+    "<b>Undersampling</b> is the process where you randomly delete some of the observations from the majority class in order to match the numbers with the minority class\n",
+    "\n",
+    "<b> Oversampling </b> is the process of generating synthetic data that tries to randomly generate a sample of the attributes from observations in the minority class. There are a number of methods used to oversample a dataset for a typical classification problem. The most common technique is called SMOTE (Synthetic Minority Over-sampling Technique)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Why do we create a sub-Sample?\n",
+    "### Why do we create a Resampling?\n",
     "\n",
-    "Because the original dataframe is imbalanced! \n",
-    "Using the original dataset can cause the following problems:\n",
+    "Because the original dataframe is imbalanced! Using the original dataset can cause the following problems:\n",
     "\n",
     "<b>Overfitting:</b> Our classification model assume that in most cases there is no fraud! What we want for our model is to be certain when a fraud occurs.\n",
     "\n",
